zetasql/compliance/testdata/analytic_partitionby_orderby.test
[load_proto_files=zetasql/testdata/test_schema.proto]
[load_proto_names=zetasql_test__.KitchenSinkPB]
[load_enum_names=zetasql_test__.TestEnum]
[prepare_database]
CREATE TABLE TableAllTypes AS
SELECT CAST(1 AS int64) as row_id,
       CAST(true AS bool) as bool_val,
       CAST(null AS int32) as int32_val,
       CAST(-1 AS int64) as int64_val,
       CAST(1 AS uint32) as uint32_val,
       CAST(10 AS uint64) as uint64_val,
       CAST(0.125 AS float) as float_val,
       CAST(0.125 AS double) as double_val,
       CAST("11" AS string) as str_val,
       CAST("1" AS BYTES) as bytes_val,
       CAST('2014-01-01' AS DATE) as date_val,
       TIMESTAMP '2014-01-01 00:00:01.011011 UTC' as timestamp_val
UNION ALL
SELECT CAST(2 AS int64) as row_id,
       CAST(true AS bool) as bool_val,
       CAST(null AS int32) as int32_val,
       CAST(-1 AS int64) as int64_val,
       CAST(1 AS uint32) as uint32_val,
       CAST(10 AS uint64) as uint64_val,
       CAST(0.125 AS float) as float_val,
       CAST(0.250 AS double) as double_val,
       CAST("11" AS string) as str_val,
       CAST("2" AS BYTES) as bytes_val,
       CAST('2014-01-01' AS DATE) as date_val,
       TIMESTAMP '2014-01-01 00:00:01.011011 UTC' as timestamp_val
UNION ALL
SELECT CAST(3 AS int64) as row_id,
       CAST(true AS bool) as bool_val,
       CAST(-1 AS int32) as int32_val,
       CAST(-1 AS int64) as int64_val,
       CAST(10 AS uint32) as uint32_val,
       CAST(1 AS uint64) as uint64_val,
       CAST("NaN" AS float) as float_val,
       CAST("+Inf" AS double) as double_val,
       CAST("11" AS string) as str_val,
       CAST("2" AS BYTES) as bytes_val,
       CAST('2014-01-11' AS DATE) as date_val,
       TIMESTAMP '2014-01-01 00:00:01.011011 UTC' as timestamp_val
UNION ALL
SELECT CAST(4 AS int64) as row_id,
       CAST(false AS bool) as bool_val,
       CAST(1 AS int32) as int32_val,
       CAST(-1 AS int64) as int64_val,
       CAST(10 AS uint32) as uint32_val,
       CAST(1 AS uint64) as uint64_val,
       CAST("+Inf" AS float) as float_val,
       CAST("-Inf" AS double) as double_val,
       CAST("1" AS string) as str_val,
       CAST("3" AS BYTES) as bytes_val,
       CAST('2014-01-01' AS DATE) as date_val,
       TIMESTAMP '2015-01-01 00:00:01.011011 UTC' as timestamp_val
UNION ALL
SELECT CAST(5 AS int64) as row_id,
       CAST(false AS bool) as bool_val,
       CAST(2 AS int32) as int32_val,
       CAST(-1 AS int64) as int64_val,
       CAST(10 AS uint32) as uint32_val,
       CAST(1 AS uint64) as uint64_val,
       CAST("+Inf" AS float) as float_val,
       CAST("-Inf" AS double) as double_val,
       CAST("1" AS string) as str_val,
       CAST("3" AS BYTES) as bytes_val,
       CAST('2014-11-01' AS DATE) as date_val,
       TIMESTAMP '2015-01-01 01:00:01.011011 UTC' as timestamp_val
--
ARRAY<STRUCT<
        row_id INT64,
        bool_val BOOL,
        int32_val INT32,
        int64_val INT64,
        uint32_val UINT32,
        uint64_val UINT64,
        float_val FLOAT,
        double_val DOUBLE,
        str_val STRING,
        bytes_val BYTES,
        date_val DATE,
        timestamp_val TIMESTAMP
      >>
[{
   1,
   true,
   NULL,
   -1,
   1,
   10,
   0.125,
   0.125,
   "11",
   b"1",
   2014-01-01,
   2014-01-01 00:00:01.011011+00
 },
 {
   2,
   true,
   NULL,
   -1,
   1,
   10,
   0.125,
   0.25,
   "11",
   b"2",
   2014-01-01,
   2014-01-01 00:00:01.011011+00
 },
 {
   3,
   true,
   -1,
   -1,
   10,
   1,
   nan,
   inf,
   "11",
   b"2",
   2014-01-11,
   2014-01-01 00:00:01.011011+00
 },
 {
   4,
   false,
   1,
   -1,
   10,
   1,
   inf,
   -inf,
   "1",
   b"3",
   2014-01-01,
   2015-01-01 00:00:01.011011+00
 },
 {
   5,
   false,
   2,
   -1,
   10,
   1,
   inf,
   -inf,
   "1",
   b"3",
   2014-11-01,
   2015-01-01 01:00:01.011011+00
 }]
==

[default required_features=ANALYTIC_FUNCTIONS]
[name=partitionby_supported_types_1]
SELECT COUNT(row_id) OVER (PARTITION BY bool_val),
       COUNT(row_id) OVER (PARTITION BY int32_val, int64_val),
       COUNT(row_id) OVER (PARTITION BY uint32_val, uint64_val),
       COUNT(row_id) OVER (PARTITION BY str_val, bytes_val),
       COUNT(row_id) OVER (PARTITION BY timestamp_val, date_val)
FROM TableAllTypes
--
ARRAY<STRUCT<INT64, INT64, INT64, INT64, INT64>>[
  {3, 2, 2, 1, 2},
  {3, 2, 2, 2, 2},
  {3, 1, 3, 2, 1},
  {2, 1, 3, 2, 1},
  {2, 1, 3, 2, 1}
]
==

[name=partitionby_supported_types_2]
SELECT COUNT(row_id) OVER (PARTITION BY float_val)
FROM TableAllTypes
--
ERROR: generic::invalid_argument: Partitioning by expressions of type FLOAT is not allowed [at 1:41]
SELECT COUNT(row_id) OVER (PARTITION BY float_val)
                                        ^
==

[name=partitionby_supported_types_3]
SELECT COUNT(row_id) OVER (PARTITION BY double_val)
FROM TableAllTypes
--
ERROR: generic::invalid_argument: Partitioning by expressions of type DOUBLE is not allowed [at 1:41]
SELECT COUNT(row_id) OVER (PARTITION BY double_val)
                                        ^
==

[name=partitionby_null]
SELECT int_val, COUNT(1) OVER (PARTITION BY int_val)
FROM (SELECT CAST(null AS INT64) as int_val UNION ALL
      SELECT 2 UNION ALL
      SELECT 3 UNION ALL
      SELECT CAST(null AS INT64) UNION ALL
      SELECT CAST(null AS INT64) UNION ALL
      SELECT CAST(null AS INT64))
--
ARRAY<STRUCT<int_val INT64, INT64>>[
  {NULL, 4},
  {NULL, 4},
  {NULL, 4},
  {NULL, 4},
  {2, 1},
  {3, 1}
]
==

[name=partitionby_enum]
SELECT enum_val, COUNT(enum_val) OVER (PARTITION BY enum_val)
FROM (SELECT CAST(0 AS `zetasql_test__.TestEnum`) enum_val UNION ALL
      SELECT CAST(1 AS `zetasql_test__.TestEnum`) UNION ALL
      SELECT CAST(1 AS `zetasql_test__.TestEnum`) UNION ALL
      SELECT CAST(2 AS `zetasql_test__.TestEnum`) UNION ALL
      SELECT CAST(2 AS `zetasql_test__.TestEnum`) UNION ALL
      SELECT CAST(null AS `zetasql_test__.TestEnum`) UNION ALL
      SELECT CAST(null AS `zetasql_test__.TestEnum`))
--
ARRAY<STRUCT<
        enum_val ENUM<zetasql_test__.TestEnum>,
        INT64
      >>
[{NULL, 0},
 {NULL, 0},
 {TESTENUM0, 1},
 {TESTENUM1, 2},
 {TESTENUM1, 2},
 {TESTENUM2, 2},
 {TESTENUM2, 2}]
==

[name=partitionby_struct]
[required_features=V_1_2_GROUP_BY_STRUCT,ANALYTIC_FUNCTIONS]
SELECT struct_val, COUNT(struct_val) OVER (PARTITION BY struct_val)
FROM (SELECT STRUCT(3, 5) struct_val UNION ALL
      SELECT STRUCT(3, 5) UNION ALL
      SELECT STRUCT(1, 5) UNION ALL
      SELECT STRUCT(3, CAST(null AS int64)))
--
ARRAY<STRUCT<
        struct_val STRUCT<INT64, INT64>,
        INT64
      >>
[{{1, 5}, 1}, {{3, NULL}, 1}, {{3, 5}, 2}, {{3, 5}, 2}]
==

[name=partitionby_proto]
SELECT proto_val, COUNT(proto_val) OVER (PARTITION BY proto_val)
FROM (SELECT NEW zetasql_test__.KitchenSinkPB(5 AS int64_key_1,
                                              6 AS int64_key_2) proto_val
      UNION ALL
      SELECT NEW zetasql_test__.KitchenSinkPB(4 AS int64_key_1,
                                              6 AS int64_key_2)
      UNION ALL
      SELECT NEW zetasql_test__.KitchenSinkPB(5 AS int64_key_1,
                                              6 AS int64_key_2)
      UNION ALL
      SELECT NEW zetasql_test__.KitchenSinkPB(5 AS int64_key_1,
                                              6 AS int64_key_2,
                                              NULL AS int32_val))
--
ERROR: generic::invalid_argument: Partitioning by expressions of type PROTO is not allowed [at 1:55]
SELECT proto_val, COUNT(proto_val) OVER (PARTITION BY proto_val)
                                                      ^
==

[name=partitionby_array]
[test_features1=V_1_2_GROUP_BY_ARRAY]
SELECT array_val, ROW_NUMBER() OVER (PARTITION BY array_val)
FROM (SELECT [1, 2, 3] array_val UNION ALL
      SELECT [2, 3, 4] UNION ALL SELECT [2, 3, 4])
--
WITH FEATURES: ANALYTIC_FUNCTIONS,V_1_2_GROUP_BY_ARRAY
ARRAY<STRUCT<array_val ARRAY<>, INT64>>[
  {
    ARRAY<INT64>[1, 2, 3],
    1
  },
  {
    ARRAY<INT64>[2, 3, 4],
    1
  },
  {
    ARRAY<INT64>[2, 3, 4],
    2
  }
]
--
WITH FEATURES: ANALYTIC_FUNCTIONS
ERROR: generic::invalid_argument: Partitioning by expressions of type ARRAY is not allowed [at 1:51]
SELECT array_val, ROW_NUMBER() OVER (PARTITION BY array_val)
                                                  ^
==

# Partition by a correlated column reference.
[name=partitionby_correlated_column_1]
SELECT a.int64_key_1,
       (SELECT SUM(a.int64_key_1)
                   OVER (PARTITION BY a.int_with_default_nullable)
        FROM a.repeated_uint32_val r ORDER BY r LIMIT 1)
FROM (SELECT NEW zetasql_test__.KitchenSinkPB(
                     1 AS int64_key_1,
                     2 AS int64_key_2,
                     ARRAY<UINT32>[7, 8, 9]
                         as repeated_uint32_val) AS a UNION ALL
      SELECT NEW zetasql_test__.KitchenSinkPB(
                     3 AS int64_key_1,
                     4 AS int64_key_2)) AS outer_table
--
ARRAY<STRUCT<int64_key_1 INT64, INT64>>[{3, NULL}, {1, 3}]
==

# Partition by a correlated column reference and a non-correlated reference.
[name=partitionby_correlated_column_2]
SELECT a.int64_key_1,
       (SELECT
            SUM(a.int64_key_1) OVER (PARTITION BY r,
                                                  a.int_with_default_nullable)
        FROM a.repeated_uint32_val r ORDER BY r LIMIT 1)
FROM (SELECT NEW zetasql_test__.KitchenSinkPB(
                     1 AS int64_key_1,
                     2 AS int64_key_2,
                     ARRAY<UINT32>[7, 7, 9]
                         as repeated_uint32_val) AS a UNION ALL
      SELECT NEW zetasql_test__.KitchenSinkPB(
                     3 AS int64_key_1,
                     4 AS int64_key_2)) AS outer_table
--
ARRAY<STRUCT<int64_key_1 INT64, INT64>>[{3, NULL}, {1, 2}]
==

[name=orderby_supported_types_1]
SELECT bool_val, RANK() OVER (ORDER BY bool_val)
FROM TableAllTypes
--
ARRAY<STRUCT<bool_val BOOL, INT64>>[
  {false, 1},
  {false, 1},
  {true, 3},
  {true, 3},
  {true, 3}
]
==

[name=orderby_supported_types_2]
SELECT int32_val, int64_val,
       RANK() OVER (ORDER BY int32_val DESC, int64_val)
FROM TableAllTypes
--
ARRAY<STRUCT<int32_val INT32, int64_val INT64, INT64>>[
  {2, -1, 1},
  {1, -1, 2},
  {-1, -1, 3},
  {NULL, -1, 4},
  {NULL, -1, 4}
]
==

[name=orderby_supported_types_3]
SELECT uint32_val, uint64_val,
       RANK() OVER (ORDER BY uint32_val, uint64_val DESC)
FROM TableAllTypes
--
ARRAY<STRUCT<uint32_val UINT32, uint64_val UINT64, INT64>>[
  {1, 10, 1},
  {1, 10, 1},
  {10, 1, 3},
  {10, 1, 3},
  {10, 1, 3}
]
==

[name=orderby_supported_types_4]
SELECT str_val, bytes_val,
       RANK() OVER (ORDER BY str_val, bytes_val)
FROM TableAllTypes
--
ARRAY<STRUCT<str_val STRING, bytes_val BYTES, INT64>>[
  {"1", b"3", 1},
  {"1", b"3", 1},
  {"11", b"1", 3},
  {"11", b"2", 4},
  {"11", b"2", 4}
]
==

[name=orderby_supported_types_5]
SELECT timestamp_val, date_val,
       RANK() OVER (ORDER BY timestamp_val ASC, date_val DESC)
FROM TableAllTypes
--
ARRAY<STRUCT<
        timestamp_val TIMESTAMP,
        date_val DATE,
        INT64
      >>
[{
   2014-01-01 00:00:01.011011+00,
   2014-01-11,
   1
 },
 {
   2014-01-01 00:00:01.011011+00,
   2014-01-01,
   2
 },
 {
   2014-01-01 00:00:01.011011+00,
   2014-01-01,
   2
 },
 {
   2015-01-01 00:00:01.011011+00,
   2014-01-01,
   4
 },
 {
   2015-01-01 01:00:01.011011+00,
   2014-11-01,
   5
 }]
==

[test_features1=DISALLOW_GROUP_BY_FLOAT]
[name=orderby_float_1]
SELECT float_val, double_val, RANK() OVER (ORDER BY float_val, double_val)
FROM TableAllTypes
--
WITH FEATURES: ANALYTIC_FUNCTIONS
WITH FEATURES: ANALYTIC_FUNCTIONS,DISALLOW_GROUP_BY_FLOAT
ARRAY<STRUCT<float_val FLOAT, double_val DOUBLE, INT64>>[
  {nan, inf, 1},
  {0.125, 0.125, 2},
  {0.125, 0.25, 3},
  {inf, -inf, 4},
  {inf, -inf, 4}
]
==

[test_features1=DISALLOW_GROUP_BY_FLOAT]
[name=orderby_float_2]
SELECT double_val, count(row_id) OVER (ORDER BY double_val RANGE 2 PRECEDING)
FROM TableAllTypes
--
WITH FEATURES: ANALYTIC_FUNCTIONS
ARRAY<STRUCT<double_val DOUBLE, INT64>>[
  {-inf, 2},
  {-inf, 2},
  {0.125, 1},
  {0.25, 2},
  {inf, 1}
]
--
WITH FEATURES: ANALYTIC_FUNCTIONS,DISALLOW_GROUP_BY_FLOAT
ERROR: generic::invalid_argument: Ordering by expressions of type DOUBLE is not allowed in a RANGE-based window [at 1:49]
SELECT double_val, count(row_id) OVER (ORDER BY double_val RANGE 2 PRECEDING)
                                                ^
==

[test_features1=DISALLOW_GROUP_BY_FLOAT]
[name=orderby_float_3]
SELECT double_val, count(row_id) OVER (ORDER BY float_val RANGE 2 PRECEDING)
FROM TableAllTypes
--
WITH FEATURES: ANALYTIC_FUNCTIONS
ARRAY<STRUCT<double_val DOUBLE, INT64>>[
  {inf, 1},
  {0.125, 2},
  {0.25, 2},
  {-inf, 2},
  {-inf, 2}
]
--
WITH FEATURES: ANALYTIC_FUNCTIONS,DISALLOW_GROUP_BY_FLOAT
ERROR: generic::invalid_argument: Ordering by expressions of type FLOAT is not allowed in a RANGE-based window [at 1:49]
SELECT double_val, count(row_id) OVER (ORDER BY float_val RANGE 2 PRECEDING)
                                                ^
==

[name=orderby_float_4]
SELECT double_val, ROW_NUMBER() OVER (ORDER BY double_val)
FROM (SELECT CAST(0 AS DOUBLE) as double_val UNION ALL
      SELECT CAST(1 AS DOUBLE)      UNION ALL
      SELECT CAST(null AS DOUBLE)   UNION ALL
      SELECT CAST(null AS DOUBLE)   UNION ALL
      SELECT CAST("NaN" AS DOUBLE)  UNION ALL
      SELECT CAST("inf" AS DOUBLE)  UNION ALL
      SELECT CAST("inf" AS DOUBLE)  UNION ALL
      SELECT CAST("NaN" AS DOUBLE)  UNION ALL
      SELECT CAST("-inf" AS DOUBLE) UNION ALL
      SELECT CAST("-inf" AS DOUBLE))
--
ARRAY<STRUCT<double_val DOUBLE, INT64>>[
  {NULL, 1},
  {NULL, 2},
  {nan, 3},
  {nan, 4},
  {-inf, 5},
  {-inf, 6},
  {0, 7},
  {1, 8},
  {inf, 9},
  {inf, 10}
]
==

[name=rank_orderby_double]
SELECT double_val, RANK() OVER (ORDER BY double_val DESC)
FROM (SELECT CAST(0 AS DOUBLE) as double_val UNION ALL
      SELECT CAST(1 AS DOUBLE)     UNION ALL
      SELECT CAST(null AS DOUBLE)  UNION ALL
      SELECT CAST(null AS DOUBLE)  UNION ALL
      SELECT CAST("NaN" AS DOUBLE) UNION ALL
      SELECT CAST("inf" AS DOUBLE) UNION ALL
      SELECT CAST("inf" AS DOUBLE) UNION ALL
      SELECT CAST("NaN" AS DOUBLE) UNION ALL
      SELECT CAST("-inf" AS DOUBLE) UNION ALL
      SELECT CAST("-inf" AS DOUBLE))
--
ARRAY<STRUCT<double_val DOUBLE, INT64>>[
  {inf, 1},
  {inf, 1},
  {1, 3},
  {0, 4},
  {-inf, 5},
  {-inf, 5},
  {nan, 7},
  {nan, 7},
  {NULL, 9},
  {NULL, 9}
]
==

[name=rank_orderby_float]
SELECT float_val, RANK() OVER (ORDER BY float_val DESC)
FROM (SELECT CAST(0 AS FLOAT) float_val UNION ALL
      SELECT CAST(1 AS FLOAT)      UNION ALL
      SELECT CAST(null AS FLOAT)   UNION ALL
      SELECT CAST(null AS FLOAT)   UNION ALL
      SELECT CAST("NaN" AS FLOAT)  UNION ALL
      SELECT CAST("inf" AS FLOAT)  UNION ALL
      SELECT CAST("inf" AS FLOAT)  UNION ALL
      SELECT CAST("NaN" AS FLOAT)  UNION ALL
      SELECT CAST("-inf" AS FLOAT) UNION ALL
      SELECT CAST("-inf" AS FLOAT))
--
ARRAY<STRUCT<float_val FLOAT, INT64>>[
  {inf, 1},
  {inf, 1},
  {1, 3},
  {0, 4},
  {-inf, 5},
  {-inf, 5},
  {nan, 7},
  {nan, 7},
  {NULL, 9},
  {NULL, 9}
]
==

[name=orderby_enum]
SELECT enum_val, RANK() OVER (ORDER BY enum_val DESC)
FROM (SELECT CAST(0 AS `zetasql_test__.TestEnum`) as enum_val UNION ALL
      SELECT 1 UNION ALL
      SELECT 1 UNION ALL
      SELECT 2 UNION ALL
      SELECT 2 UNION ALL
      SELECT CAST(null AS `zetasql_test__.TestEnum`) UNION ALL
      SELECT CAST(null AS `zetasql_test__.TestEnum`))
--
ARRAY<STRUCT<
        enum_val ENUM<zetasql_test__.TestEnum>,
        INT64
      >>
[{TESTENUM2, 1},
 {TESTENUM2, 1},
 {TESTENUM1, 3},
 {TESTENUM1, 3},
 {TESTENUM0, 5},
 {NULL, 6},
 {NULL, 6}]
==

[name=orderby_struct]
SELECT struct_val, RANK() OVER (ORDER BY struct_val)
FROM (SELECT STRUCT(3, 5) struct_val UNION ALL
      SELECT STRUCT(3, 5) UNION ALL
      SELECT STRUCT(1, 5) UNION ALL
      SELECT STRUCT(3, CAST(null AS int64)))
--
ERROR: generic::invalid_argument: Ordering by expressions of type STRUCT is not allowed [at 1:42]
SELECT struct_val, RANK() OVER (ORDER BY struct_val)
                                         ^
==

[name=orderby_array]
[test_features1=V_1_3_ARRAY_ORDERING]
SELECT array_val, RANK() OVER (ORDER BY array_val)
FROM (SELECT [1, 2, 3] array_val UNION ALL
      SELECT [2, 3, 4])
--
WITH FEATURES: ANALYTIC_FUNCTIONS,V_1_3_ARRAY_ORDERING
ARRAY<STRUCT<array_val ARRAY<>, INT64>>[
  {
    ARRAY<INT64>[1, 2, 3],
    1
  },
  {
    ARRAY<INT64>[2, 3, 4],
    2
  }
]
--
WITH FEATURES: ANALYTIC_FUNCTIONS
ERROR: generic::invalid_argument: Ordering by expressions of type ARRAY is not allowed [at 1:41]
SELECT array_val, RANK() OVER (ORDER BY array_val)
                                        ^
==

[name=orderby_proto]
SELECT proto_val, RANK() OVER (ORDER BY proto_val)
FROM (SELECT NEW zetasql_test__.KitchenSinkPB(5 AS int64_key_1,
                                             6 AS int64_key_2) proto_val
      UNION ALL
      SELECT NEW zetasql_test__.KitchenSinkPB(4 AS int64_key_1,
                                              6 AS int64_key_2)
      UNION ALL
      SELECT NEW zetasql_test__.KitchenSinkPB(5 AS int64_key_1,
                                              6 AS int64_key_2)
      UNION ALL
      SELECT NEW zetasql_test__.KitchenSinkPB(5 AS int64_key_1,
                                              6 AS int64_key_2,
                                              NULL AS int32_val))
--
ERROR: generic::invalid_argument: Ordering by expressions of type PROTO is not allowed [at 1:41]
SELECT proto_val, RANK() OVER (ORDER BY proto_val)
                                        ^
==

[test_features1=V_1_1_ORDER_BY_COLLATE]
[name=orderby_collate_binary_us]
SELECT str_val,
       RANK() OVER (ORDER BY str_val COLLATE "binary"),
       RANK() OVER (ORDER BY str_val COLLATE "en_US")
FROM unnest(['A', 'e', 'a', 'b', 'C', 'd', 'A']) as str_val
--
WITH FEATURES: ANALYTIC_FUNCTIONS,V_1_1_ORDER_BY_COLLATE
ARRAY<STRUCT<str_val STRING, INT64, INT64>>[
  {"a", 4, 1},
  {"A", 1, 2},
  {"A", 1, 2},
  {"b", 5, 4},
  {"C", 3, 5},
  {"d", 6, 6},
  {"e", 7, 7}
]
--
WITH FEATURES: ANALYTIC_FUNCTIONS
ERROR: generic::invalid_argument: COLLATE is not supported [at 2:38]
       RANK() OVER (ORDER BY str_val COLLATE "binary"),
                                     ^
==

[test_features1=V_1_1_ORDER_BY_COLLATE]
[name=orderby_collate_und_ci]
SELECT str_val,
       RANK() OVER (ORDER BY str_val COLLATE "und:ci"),
       RANK() OVER (ORDER BY str_val)
FROM unnest(['A', 'e', 'a', 'b', 'C', 'd', 'A']) as str_val
--
WITH FEATURES: ANALYTIC_FUNCTIONS,V_1_1_ORDER_BY_COLLATE
ARRAY<STRUCT<str_val STRING, INT64, INT64>>[
  {"A", 1, 1},
  {"A", 1, 1},
  {"C", 5, 3},
  {"a", 1, 4},
  {"b", 4, 5},
  {"d", 6, 6},
  {"e", 7, 7}
]
--
WITH FEATURES: ANALYTIC_FUNCTIONS
ERROR: generic::invalid_argument: COLLATE is not supported [at 2:38]
       RANK() OVER (ORDER BY str_val COLLATE "und:ci"),
                                     ^
==

[test_features1=V_1_1_ORDER_BY_COLLATE]
[name=orderby_collate_unknown]
SELECT RANK() OVER (ORDER BY str_val COLLATE "some_collate")
FROM TableAllTypes
--
WITH FEATURES: ANALYTIC_FUNCTIONS
ERROR: generic::invalid_argument: COLLATE is not supported [at 1:38]
SELECT RANK() OVER (ORDER BY str_val COLLATE "some_collate")
                                     ^
--
WITH FEATURES: ANALYTIC_FUNCTIONS,V_1_1_ORDER_BY_COLLATE
ERROR: generic::out_of_range: COLLATE has invalid collation name 'some_collate'
==

[test_features1=V_1_1_ORDER_BY_COLLATE]
[name=orderby_collate_null]
[parameters=cast(NULL as string) collation_name]
SELECT RANK() OVER (ORDER BY str_val COLLATE @collation_name)
FROM TableAllTypes
--
WITH FEATURES: ANALYTIC_FUNCTIONS
ERROR: generic::invalid_argument: COLLATE is not supported [at 1:38]
SELECT RANK() OVER (ORDER BY str_val COLLATE @collation_name)
                                     ^
--
WITH FEATURES: ANALYTIC_FUNCTIONS,V_1_1_ORDER_BY_COLLATE
ERROR: generic::out_of_range: COLLATE requires non-NULL collation name
==

# Order by a correlated column reference.
[name=orderby_correlated_column_1]
SELECT b,
       (SELECT count
        FROM (SELECT count(*) OVER (ORDER BY outer_table.b) count
              FROM outer_table.a.repeated_uint32_val)
        GROUP BY count)
FROM (SELECT NEW zetasql_test__.KitchenSinkPB(
                     1 AS int64_key_1,
                     2 AS int64_key_2,
                     ARRAY<UINT32>[7, 8, 9]
                         as repeated_uint32_val) AS a, 5 b UNION ALL
      SELECT NEW zetasql_test__.KitchenSinkPB(
                     1 AS int64_key_1,
                     2 AS int64_key_2,
                     ARRAY<UINT32>[7, 8]
                         as repeated_uint32_val), 6) AS outer_table
--
ARRAY<STRUCT<b INT64, INT64>>[{6, 2}, {5, 3}]
==

# Order by a correlated column reference with a range-based cumulative
# window frame.
[name=orderby_correlated_column_2]
SELECT b,
       (SELECT count
        FROM (SELECT count(*) OVER (ORDER BY outer_table.b
                                    RANGE 2 PRECEDING) count
              FROM outer_table.a.repeated_uint32_val)
        GROUP BY count)
FROM (SELECT NEW zetasql_test__.KitchenSinkPB(
                     1 AS int64_key_1,
                     2 AS int64_key_2,
                     ARRAY<UINT32>[7, 8, 9]
                         as repeated_uint32_val) AS a, NULL b UNION ALL
      SELECT NEW zetasql_test__.KitchenSinkPB(
                     1 AS int64_key_1,
                     2 AS int64_key_2,
                     ARRAY<UINT32>[7, 8]
                         as repeated_uint32_val) AS a, 6 b) AS outer_table
--
ARRAY<STRUCT<b INT64, INT64>>[{6, 2}, {NULL, 3}]
==

# Order by a correlated column reference with a special range-based moving
# window frame. The window is empty if the order key is finite.
[name=orderby_correlated_column_3]
SELECT b,
       (SELECT count
        FROM (SELECT count(*) OVER (ORDER BY outer_table.b
                                    RANGE BETWEEN 2 PRECEDING AND
                                                  3 PRECEDING) count
              FROM outer_table.a.repeated_uint32_val)
        GROUP BY count)
FROM (SELECT NEW zetasql_test__.KitchenSinkPB(
                     1 AS int64_key_1,
                     2 AS int64_key_2,
                     ARRAY<UINT32>[7, 8, 9]
                         as repeated_uint32_val) AS a, NULL b UNION ALL
      SELECT NEW zetasql_test__.KitchenSinkPB(
                     1 AS int64_key_1,
                     2 AS int64_key_2,
                     ARRAY<UINT32>[7, 8, 9]
                         as repeated_uint32_val) AS a, 6 b) AS outer_table
--
ARRAY<STRUCT<b INT64, INT64>>[{6, 0}, {NULL, 3}]
==

# Order by a correlated column reference and a non-correlated reference.
[name=orderby_correlated_column_4]
SELECT b,
       (SELECT r
        FROM (SELECT r, count(*) OVER (ORDER BY r, outer_table.b) count
              FROM outer_table.a.repeated_uint32_val r)
        WHERE count = 2
        GROUP BY r)
FROM (SELECT NEW zetasql_test__.KitchenSinkPB(
                     1 AS int64_key_1,
                     2 AS int64_key_2,
                     ARRAY<UINT32>[7, 7, 9]
                         as repeated_uint32_val) AS a, 5 b UNION ALL
      SELECT NEW zetasql_test__.KitchenSinkPB(
                     1 AS int64_key_1,
                     2 AS int64_key_2,
                     ARRAY<UINT32>[7, 8]
                         as repeated_uint32_val), 6) AS outer_table
--
ARRAY<STRUCT<b INT64, UINT32>>[{6, 8}, {5, 7}]
==

# Partition by and order by the same column with a range-based
# cumulative window.
[name=partitionby_and_orderby_same_column_1]
SELECT int32_val, count(*) OVER (PARTITION BY int32_val ORDER BY int32_val
                                 RANGE BETWEEN UNBOUNDED PRECEDING AND
                                               CURRENT ROW)
FROM TableAllTypes
--
ARRAY<STRUCT<int32_val INT32, INT64>>[
  {NULL, 2},
  {NULL, 2},
  {-1, 1},
  {1, 1},
  {2, 1}
]
==

# Partition by and order by the same column with a range-based
# moving window. The offset window boundary for a row depends on the value of
# the correlated order by column.
[name=partitionby_and_orderby_same_column_2]
SELECT int32_val, SUM(1) OVER (PARTITION BY int32_val ORDER BY int32_val
                               RANGE BETWEEN 2 PRECEDING AND 3 PRECEDING)
FROM TableAllTypes
--
ARRAY<STRUCT<int32_val INT32, INT64>>[
  {NULL, 2},
  {NULL, 2},
  {-1, NULL},
  {1, NULL},
  {2, NULL}
]
==

[name=partitionby_and_orderby_countif]
SELECT int32_val, countif(int32_val > 0)
OVER (PARTITION BY int32_val ORDER BY int32_val
      RANGE BETWEEN UNBOUNDED PRECEDING AND CURRENT ROW)
FROM TableAllTypes
--
ARRAY<STRUCT<int32_val INT32, INT64>>[
  {NULL, 0},
  {NULL, 0},
  {-1, 0},
  {1, 1},
  {2, 1}
]
==

[name=partitionby_and_orderby_countif_no_partition]
SELECT int32_val, countif(int32_val > 0)
OVER (ORDER BY int32_val RANGE BETWEEN UNBOUNDED PRECEDING AND CURRENT ROW)
FROM TableAllTypes
--
ARRAY<STRUCT<int32_val INT32, INT64>>[
  {NULL, 0},
  {NULL, 0},
  {-1, 0},
  {1, 1},
  {2, 2}
]
==

# Partition by a constant expression.
[name=partitionby_constant_expression]
SELECT SUM(row_id) OVER (PARTITION BY 1)
FROM TableAllTypes
--
ARRAY<STRUCT<INT64>>[{15}, {15}, {15}, {15}, {15}]
==

# Partition by a mix of constant and non-constant expressions.
[name=partitionby_constant_and_non_constant_expressions]
SELECT SUM(row_id) OVER (PARTITION BY bool_val, 1)
FROM TableAllTypes
--
ARRAY<STRUCT<INT64>>[{9}, {9}, {6}, {6}, {6}]
==

# Order by a constant expression.
[name=orderby_constant_expression]
SELECT SUM(row_id) OVER (ORDER BY 1)
FROM TableAllTypes
--
ARRAY<STRUCT<INT64>>[{15}, {15}, {15}, {15}, {15}]
==

# Order by a mix of constant and non-constant expressions.
[name=orderby_constant_and_non_constant_expressions]
SELECT SUM(row_id) OVER (ORDER BY bool_val, 1)
FROM TableAllTypes
--
ARRAY<STRUCT<INT64>>[{9}, {9}, {15}, {15}, {15}]
